# PFMG

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.adoc  README.md  package-lock.json  package.json  pylint.rc  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/workflows/: build-and-test-project.yml  bump-version.yml  ci.yml  codeql.yml  merge-release.yml  python-app.yml  release-pr.yml  ruff_check.yml  sync-dev-from-main.yml
Documentation/: Reflexions.adoc  cas-d-usage.adoc  chap1.adoc  chap2.adoc  description.tex  grammar-structure.adoc  introduction.adoc  kalaba.adoc
Documentation/grammar/: morphosyntax.adoc
examples/: __init__.py  execution_grammaire.ipynb
examples/data/: Blocks.yaml  Gloses.yaml  MorphoSyntax.yaml
examples/data2/: Blocks.yaml  MorphoSyntax.yaml  Stems.yaml
kalaba-stubs/lexique/: actions.pyi  applier.pyi  decoupeur.pyi  errors.pyi  etl.pyi  gloseur.pyi  lexicon.pyi  realizer.pyi  ruler.pyi  structures.pyi  syntax.pyi  unary.pyi  validate.pyi
lexique/: Reflexions.adoc  __init__.py  actions.py  applier.py  decoupeur.py  errors.py  etl.py  execution_grammaire.ipynb  glose_reader.py  gloseur.py  lexicon.py  main.py  notes  readers.py  realizer.py  report.py  ruler.py  structures.py  syntax.py  translate.py  unary.py  utils2.py  validate.py
lexique/data/french_v1/: Rules.txt  Rules.yaml
lexique/data/french_v2/: Blocks.yaml  other_rules
lexique/lexical_structures/: BlockEntry.py  Blocks.py  Circumfix.py  Condition.py  Factory.py  Factoy.py  Forme.py  FormeEntry.py  Gabarit.py  Gloses.py  Lexeme.py  LexemeEntry.py  Morphemes.py  Paradigm.py  Phonology.py  Prefix.py  Radical.py  Selection.py  Stems.py  Suffix.py  Syntax.py  utils.py
lexique/lexical_structures/interfaces/: Display.py  Equality.py  Reader.py  Searchable.py  Selector.py
lexique/lexical_structures/mixins/: MixinDisplay.py  MixinEquality.py  MixinRepresentor.py
lexique/lexical_structures/test/: test_blocks.py  test_circumfix.py  test_condition.py  test_create_morpheme.py  test_forme.py  test_forme_entry.py  test_gabarit.py  test_gloses.py  test_lexeme.py  test_lexeme_entry.py  test_morphemes.py  test_paradigm.py  test_phonology.py  test_prefix.py  test_radical.py  test_selection.py  test_stem_space.py  test_stems.py  test_suffix.py  test_syntax.py
lexique/schemas/: atomes.json  blocks.json  gloses.json  morphosyntax.json  stems.json  structs.cue
lexique/test/: conftest.py  test_actions.py  test_applier.py  test_decoupeur.py  test_etl.py  test_glose_reader.py  test_readers.py  test_realizer.py  test_ruler.py  test_syntax.py  test_unary.py  test_validate.py
lexique/test/data_for_test/: toto.cue
lexique_2/: actions.py  main.py  paths.py
lexique_2/data/french_v2/: Gloses.yaml  Rules.txt  Stems.yaml
lexique_2/lexical_structures/: Blocks.py  Circumfix.py  Condition.py  Factoy.py  Forme.py  Gabarit.py  Gloses.py  Lexeme.py  Morphemes.py  Paradigm.py  Phonology.py  Prefix.py  Radical.py  Selection.py  StemSpace.py  Stems.py  Suffix.py  Syntax.py  types.py
lexique_2/lexical_structures/interfaces/: Display.py  Equality.py  Reader.py  Realizer.py  Representor.py  Rulable.py  Selector.py
lexique_2/schemas/cue.mod/: module.cue
lexique_2/test/: test_actions.py  test_paths.py
pfmg/: __init__.py  conftest.py
pfmg/examples/: execution_grammaire.ipynb
pfmg/lexique/: __init__.py  utils.py
pfmg/parser/: ABCParser.py  KalabaParser.py  Parsing.py  Syntax.py  TranslatorParser.py  ValidatorParser.py  utils.py
pfmg/parsing/: utils.py
pfmg/test/: conftest.py
pfmg/utils/: abstract_factory.py  functions.py  paths.py  trie.py
projects/: primitives.cue  syntaxe.cue  toto.cue
projects/cue.mod/: module.cue
schemas/: data.cue
schemas/schemas/: blocks.cue  gloses.cue  literals.cue  morphosyntax.cue
scripts/merge-drivers/: README.md  pyproject_version.py  setup.sh  test-merge-drivers.sh
utils/: abstract_factory.py  compose.py  functions.py  paths.py  trie.py
utils/test/: conftest.py  test_factory_function.py  test_factory_method.py  test_trie.py
(+307 files in other folders)
