[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "pylint",
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "pytest-xdist",
]
typing = [
    "ty",
    "types-frozendict",
    "types-PyYAML",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typing" },
    "pre-commit",
]

[project]
name = "pfmg"
version = "0.2.0"
description = ""
authors = [
    { name = "Korantin Lévêque", email = "korantin.leveque@protonmail.com" },
]
license = { text = "bsd" }
readme = "README.md"
requires-python = ">=3.14,<3.15"

dependencies = [
    "frozendict",
    "more-itertools",
    "nltk",
    "numpy",
    "polars",
    "pycue",
    "pyyaml",
]

[tool.coverage.run]
source = ["pfmg"]
omit = ["*/test/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = []
